# clai

./: .gitignore  Cargo.toml  README.md  ai_model_state.json
src/: main.rs
src/utils/: ai_model_state.rs  cli.rs  config.rs  mod.rs  question_state.rs  talk_to_ai.rs
