[package]
name = "clai"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # for exploratory dev

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Maximize size reduction optimizations.


[dependencies]
# -- Async 
tokio = { version = "1", features = ["full"] }
# -- GenAI
genai = "=0.1.1" # the equal sign before the version is required to lock to a specific version. ==0.1.1
serde = { version = "1.0", features = ["derive"] } # for serializing and deserializing
serde_json = "1.0" # for serializing and deserializing JSON
clap = { version = "3.0", features = ["derive"] } # for command line arguments
